# rs-docs

./: README.md  _config.yml  configuration.md  getting_started.md  index.md  pycharm_config.md
ai_week/: pyproject.toml
ai_week/ai_week/: lambda_function.py  lambda_handler.py  response_builder.py  slack_event_processor.py  slack_message_handler.py  token_manager.py
assets/css/: index.css
data/: parameters.yaml
